tests/type-check/bad/cases-singleton-2.arr


data Foo:
  | bar()
end

a :: Number = cases(Foo) bar():
  | bar => 5
end
